--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@sanity/image-url": "^1.2.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "styled-components": "^6.3.8"
   },
   "devDependencies": {
